--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-CONNECTION_URL = mongodb+srv://admin:zkvqqg3Msi6kiueB@cluster0.wywqh.mongodb.net/MERN_APP_Database?retryWrites=true&w=majority
+CONNECTION_URL = mongodb+srv://admin:zkvqqg3Msi6kiueB@cluster0.wywqh.mongodb.net/MERN_APP_Database_V2?retryWrites=true&w=majority
